...
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="1Oh-cw-OtO">
                                <rect key="frame" x="35" y="166.5" width="305" height="300"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crown" translatesAutoresizingMaskIntoConstraints="NO" id="fHy-LG-RCj">
                                        <rect key="frame" x="0.0" y="0.0" width="305" height="52"/>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clan Tag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JPh-aN-geL">
                                        <rect key="frame" x="0.0" y="62" width="305" height="52"/>
                                        <fontDescription key="fontDescription" name="Supercell-Magic" family="Supercell-Magic" pointSize="17"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <connections>
                            <outlet property="dataSource" destination="oCx-BK-jfy" id="rLT-Lf-fB5"/>
                            <outlet property="delegate" destination="oCx-BK-jfy" id="jBv-gS-BhP"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Clans" id="JEh-dk-cXa">
                        <barButtonItem key="leftBarButtonItem" title="Mini Game" id="2QM-m1-Hnp">
                            <connections>
                                <segue destination="PaS-rF-sfj" kind="show" identifier="" id="lI9-qS-91o"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ll0-el-uhu">
...
