...
                    <color key="backgroundColor" red="0.85098039219999999" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="38" id="ZHc-G3-ELI"/>
                        <constraint firstAttribute="width" constant="343" id="eTQ-kx-idX"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Supercell-Magic" family="Supercell-Magic" pointSize="17"/>
                    <state key="normal" title="Next">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <connections>
                        <action selector="clickedNext:" destination="iN0-l3-epB" eventType="touchUpInside" id="ZsV-Eh-R63"/>
                    </connections>
                </button>
...
